<resources>
    <string name="app_name">AndroidMooc</string>
    <string name="action_settings">Settings</string>
    <string name="input_your_key_word">请输入您要搜索的关键词</string>
    <string name="input_your_key_words">请输入多个关键词，逗号分隔</string>
    <string name="light_on">开灯</string>
    <string name="light_off">关灯</string>
    <string name="show_image">显示图片</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="device_android">安卓</string>
    <string name="device_mac">苹果</string>
    <string name="list_array">ListArray</string>
    <string name="title_activity_list_array">ListArrayActivity</string>
    <string name="simple_adapter_radio_button">SimpleAdapter</string>
    <string name="array_adapter_radio_button">ArrayAdapter</string>
    <string name="date_picker_and_time_picker_button">DateAndTime</string>
    <string name="title_activity_date_and_time_picker">DateAndTimePickerActivity</string>
    <string name="dialog_date_picker_button">DatePickerDialog</string>
    <string name="dialog_time_picker_button">TimePickerDialog</string>
    <string name="grid_view_button">GridView</string>
    <string name="title_activity_grid_view">GridViewActivity</string>
    <string name="progress_bar_button">ProgressBar</string>
    <string name="title_activity_probress_bar">ProbressBarActivity</string>
    <string name="progressbar_dialog">对话框形式的进度条</string>
    <string name="web_view_button">WebView</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="fragment_button">Fragment</string>
    <string name="title_activity_use_fragment">UseFragmentActivity</string>
    <string name="title_activity_static_fragment">StaticFragmentActivity</string>
    <string name="static_fragment_radio_button">StaticFragment</string>
    <string name="dynamic_fragment_radio_button_text">DynamicFragment</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="view_pager_button">ViewPager</string>
    <string name="title_activity_view_pager2">ViewPager2Activity</string>
    <string name="view_pager2_button">ViewPager2</string>
    <string name="view_flipper_button">ViewFlipper</string>
    <string name="title_activity_view_flipper">ViewFlipperActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_seek_bar">SeekBarActivity</string>
    <string name="toast_button">Toast</string>
    <string name="title_activity_toast">ToastActivity</string>
    <string name="toast_standard">普通Toast</string>
    <string name="toast_my_position">显示自定义位置的Toast</string>
    <string name="toast_with_image">显示图片的Toast</string>
    <string name="dialog_button">Dialog</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="dialog_yes">确认对话框</string>
    <string name="dialog_single_choice">单选对话框</string>
    <string name="dialog_mutual_choice">多选对话框</string>
    <string name="dialog_list">列表对话框</string>
    <string name="dialog_my">自定义对话框</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="notification_send">发送通知</string>
    <string name="notification_dismiss">取消通知</string>
    <string name="action_dime">主题</string>
    <string name="menu_context">ContextMenu</string>
    <string name="title_activity_context_menu">ContextMenuActivity</string>
    <string name="menu_sub_button">SubMenu</string>
    <string name="title_activity_sub_menu">SubMenuActivity</string>
    <string name="title_activity_shared_preferences">SharedPreferencesActivity</string>
    <string name="button_sqlite">SQLite</string>
    <string name="title_activity_sqlite">SQLiteActivity</string>
    <string name="button_file">File</string>
    <string name="title_activity_file">FileActivity</string>
    <string name="label_file_name">Input a file name</string>
    <string name="save_file_button">Save</string>
    <string name="success_save_file">File save successfull!</string>
    <string name="button_camera">Camera</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="start_camera_button">StartCamera</string>
</resources>
