<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.hophin.shfy.androidmooc.DialogActivity"
    tools:showIn="@layout/activity_dialog">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="dialogYes"
        android:text="@string/dialog_yes"
        android:textAllCaps="false" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="dialogSingleChoice"
        android:text="@string/dialog_single_choice"
        android:textAllCaps="false" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="dialogMutualChoice"
        android:text="@string/dialog_mutual_choice"
        android:textAllCaps="false" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="dialogList"
        android:text="@string/dialog_list"
        android:textAllCaps="false" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="dialogMy"
        android:text="@string/dialog_my"
        android:textAllCaps="false" />





</LinearLayout>
