<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.hophin.shfy.androidmooc.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <cn.hophin.shfy.androidmooc.MarqueeText
            android:id="@+id/pao_ma_deng_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:text="Hello World!" />

        <AutoCompleteTextView
            android:id="@+id/key_words_ac_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:completionThreshold="3"
            android:hint="@string/input_your_key_word" />
        <!--completionThreshold 设置输入几个字符时开始自动匹配 -->
        <MultiAutoCompleteTextView
            android:id="@+id/key_words_mac_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:completionThreshold="3"
            android:hint="@string/input_your_key_words" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/light_image_view"
                android:src="@drawable/light_switch_off"
                android:layout_width="wrap_content"
                android:layout_height="60dp" />
            <ToggleButton
                android:id="@+id/light_switch_tg_button"
                android:checked="false"
                android:textOn="@string/light_off"
                android:textOff="@string/light_on"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/light_image_view_2"
                android:src="@drawable/light_switch_off"
                android:layout_width="wrap_content"
                android:layout_height="60dp" />
            <CheckBox
                android:id="@+id/light_image_show_check_box"
                android:checked="true"
                android:text="@string/show_image"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/sex_radio_group"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/sex_man_radio_button"
                    android:checked="true"
                    android:text="@string/sex_man"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/sex_woman_radio_button"
                    android:checked="false"
                    android:text="@string/sex_woman"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </RadioGroup>
            <RadioGroup
                android:id="@+id/device_radio_group"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/device_android_radio_button"
                    android:checked="true"
                    android:text="@string/device_android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/device_mac_radio_button"
                    android:checked="false"
                    android:text="@string/device_mac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/list_array"
                android:textAllCaps="false"
                android:onClick="listArray"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>
